service FileService {
  rpc GetFiles(TeamId) returns (FileArray) {}
  rpc AddFile(File) returns (FileSuccess) {}
  rpc DeleteFile(File) returns (FileSuccess) {}
}

message FileArray {
  repeated File file = 1;
}

message TeamId {
  required int32 team_id = 1;
}

message AddFileMsg {
  required int32 team_id = 1;
  required string link = 2;
}

message File {
  required int32 id = 1;
  required string link = 2;
  required int32 team_id = 3;
}

message FileSuccess {
  required  int32 code = 1;
}